@@ -25,6 +25,8 @@
 
   * Added Joy2B+ controller support
 
+  * Enhanced Kid Vid support to play tape audio
+
   * Added BUS bankswitching support for some older demos
 
   * Fixed broken 7800 pause key support
